# db_project

./: .env  LICENSE  docker-compose.yaml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py  settings.py
backend/app/clients/: api.py
backend/app/data/: api.py
backend/app/database/: db_helper.py  models.py
backend/app/database/models/: __init__.py  base.py  clients.py  orders.py  products.py  types.py  workers.py
backend/app/orders/: api.py
backend/app/products/: api.py  schemas.py
backend/app/types/: api.py  schemas.py
backend/app/workers/: api.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.jsx  index.css  main.tsx
frontend/src/components/: AlertModal.jsx  ProductModal.jsx
frontend/src/pages/: ClienOrderPage.jsx  Clients.jsx  MainPage.jsx  Orders.jsx  ProductInfo.jsx  Products.jsx  Workers.jsx
frontend/src/pages/Clients/: Clients.jsx
frontend/src/pages/Orders/: ClienOrderPage.jsx  Orders.jsx
frontend/src/pages/Products/: ProductCreate.jsx  ProductEdit.jsx  ProductInfo.jsx  Products.jsx
frontend/src/pages/Workers/: Workers.jsx
postgres/: first_data.sql  init.sql  moredata.sql  product.sql
